examples/test/testpolicy3755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3755
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key10: value48
      key29: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value49
          key30: value39
      podSelector:
        matchLabels:
          key5: value43
